# qt_sample

./: .gitignore  README.md  pyproject.toml
qtapp/: __init__.py  __main__.py  app.py  keybinds.py  keybinds.shortcut  mainwindow.py  start.py
