[tool.poetry]
name = "qt_testing"
version = "0.1.0"
description = ""
authors = ["Adanteh <adanteh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyqt5 = "^5.14.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
